# mcp-governance

./: .gitignore  README.md  mcp_transport_test.go  overloadDetection.go  tokenAndPrice.go  unity_config.md
agent_test/: budget_test.go  competition_test.go  helpers_test.go  reasoning_chain_test.go
agenttest/: agent.go  agenttest_test.go  config.go  loader.go  main.go  metrics.go  result.go  runner.go  server.go
integration/: README.md  config.go  loader.go  main.go  mcp_client.go  metrics.go  plot_integration.py  proxy.go  result.go  run.sh  runner.go  start_bridge.sh  test_concurrency.py
loadtest/: README.md  ablation_config.go  config.go  loader.go  loadtest_test.go  main.go  metrics.go  result.go  runner.go  server.go
mcp_server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_e2e_test.py  test_agent.py
mcp_server/client/: __init__.py  agent.py  main.py
mcp_server/deploy/: deploy.sh  nginx.conf
mcp_server/server/: __init__.py  app.py  bridge.py  config.py  main.py
mcp_server/server/tools/: __init__.py  calculator.py  text_processor.py  weather.py  web_search.py
mcp_server/tests/: __init__.py  conftest.py  test_client.py  test_integration.py  test_server.py  test_tools.py
mcp_test/: dynamic_pricing_test.go  e2e_governance_test.go  load_shedding_test.go  poisson_burst_test.go  rate_limiting_test.go
prompt/: agent_test.md  editor.md  editor2.md  mcp_test.md  mcpserver_.md  mcpserver_2.md  prompt1.md  prompt2.md  prompt3.md
visualization/: README.md  __init__.py  parse_test_output.py  (+9 more)
(+165 files in other folders)
