[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-real-server"
version = "1.0.0"
description = "基于 MCP (Model Context Protocol) 的真实工具服务器"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.2.0",
    "starlette>=0.36.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
deploy = [
    "gunicorn>=21.2.0",
    "supervisor>=4.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["server", "client"]
